--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,59 +1,75 @@
-<div class="step-container">
+<div class="step-container yellow-theme">
     <mat-card class="step">
-        <mat-horizontal-stepper [linear]="false" #stepper>
+        <mat-vertical-stepper  #stepper>
             <mat-step [stepControl]="firstFormGroup">
                 <form [formGroup]="firstFormGroup">
-                    <ng-template matStepLabel>Identify student</ng-template>
+                    <ng-template matStepLabel>Student</ng-template>
                     <mat-form-field>
-                        <input matInput placeholder="Student ID" formControlName="firstCtrl" required>
+                        <input matInput name="studentID" placeholder="Student ID" formControlName="firstCtrl" data-lpignore="true" required>
                     </mat-form-field>
                     <div>
-                        <button mat-stroked-button matStepperNext>Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit" (click)="loadSID()">Next</button>
                     </div>
                 </form>
             </mat-step>
             <mat-step [stepControl]="secondFormGroup">
                 <form [formGroup]="secondFormGroup">
-                    <ng-template matStepLabel>Choose a date</ng-template>
+                    <ng-template matStepLabel>Date</ng-template>
                     <mat-form-field>
-                        <input matInput [matDatepicker]="picker" placeholder="Date" formControlName="secondCtrl" required>
+                        <input matInput [matDatepicker]="picker" name="date" placeholder="Date" formControlName="secondCtrl" required>
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                        <button mat-stroked-button matStepperNext>Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit" (click)="loadDate()">Next</button>
                     </div>
                 </form>
             </mat-step>
             <mat-step [stepControl]="thirdFormGroup">
                 <form [formGroup]="thirdFormGroup">
-                    <ng-template matStepLabel>Choose Teachers</ng-template>
-                    <p style="padding-left: 1em; margin-bottom: 0em">Enter first part of teacher e-mail (first initial, full last name)</p>
+                    <ng-template matStepLabel>Teachers</ng-template>
+                    <p style="padding-left: 1em; margin-bottom: 0">Enter first part of teacher e-mail (first initial, full last name)</p>
                     <div style="padding: 1em">
                         <mat-form-field style="padding-right: 1em">
-                            <input matInput placeholder="Usual teacher" formControlName="utCtrl" required>
+                            <input matInput name="fromTeachID" [attr.disabled]="this.fromMe" placeholder="Usual teacher" data-lpignore="true" formControlName="utCtrl" required>
                         </mat-form-field>
-                        <mat-checkbox formControlName="checkOne" style="margin-right: 6em">Me</mat-checkbox>
+                        <mat-checkbox formControlName="checkOne" [attr.disabled]="this.toMe" style="margin-right: 6em">Me</mat-checkbox>
                         <mat-form-field style="padding-right: 1em">
-                            <input matInput placeholder="Tutorial teacher" formControlName="ttCtrl" required>
+                            <input matInput name="toTeachID" placeholder="Tutorial teacher" data-lpignore="true" formControlName="ttCtrl" required>
                         </mat-form-field>
                         <mat-checkbox formControlName="checkTwo">Me</mat-checkbox>
                     </div>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                        <button mat-stroked-button matStepperNext>Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" (click)="loadTeachers()" type="submit">Next</button>
+                    </div>
+                </form>
+            </mat-step>
+            <mat-step [stepControl]="fourthFormGroup">
+                <form [formGroup]="fourthFormGroup">
+                    <ng-template matStepLabel>Reason</ng-template>
+                    <mat-form-field>
+                        <input matInput name="reason" placeholder="Reason" formControlName="reasonCtrl">
+                    </mat-form-field>
+                    <div>
+                        <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" (click)="submit()" type="submit">Finish</button>
+                        <mat-spinner style="height: 30px; width: 30px;" *ngIf="loading"></mat-spinner>
                     </div>
                 </form>
             </mat-step>
             <mat-step>
-                <ng-template matStepLabel>Done</ng-template>
-                <p style="padding: 1em">You are now done.</p>
-                <div>
-                    <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                    <button mat-stroked-button (click)="stepper.reset()">Reset</button>
+                <ng-template matStepLabel>Finish</ng-template>
+                <div *ngIf="!loading">
+                    <p *ngIf="gotError">An error occurred while processing your request. Please try again.</p>
+                    <p style="padding: 1em">{{response}}</p>
+                    <div>
+                        <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
+                        <button mat-stroked-button (click)="stepper.reset()">Create Another</button>
+                    </div>
                 </div>
             </mat-step>
-        </mat-horizontal-stepper>
+        </mat-vertical-stepper>
     </mat-card>
 </div>
