--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -1,35 +1,35 @@
-<div style="padding: 100px" *ngIf="arriving.length">
+<div style="margin: 100px 120px 20px; font-family: psans-bold, sans-serif; font-size: 24px">
+    Requests to attend
+    
+</div>
+
+<div style="margin: 0 100px 100px; padding-top: 0;" *ngIf="arriving.length">
     <div class="card-container" *ngFor="let a of arriving">
         <mat-card class="card">
-            <mat-card-title class="pad">{{a}}</mat-card-title>
+            <mat-card-title class="pad">{{a.name}}</mat-card-title>
             <mat-card-content style="padding-left: 1em;">
                 Hello
             </mat-card-content>
             <mat-card-actions style="overflow: auto">
-                <div class="button-bar" style="float: right">
-                    <button mat-stroked-button color="warn">
-                        Deny
-                    </button>
-                    <button mat-raised-button style="background-color: limegreen">
-                        <span class="mat-button-wrapper" style="color: white">Allow</span>
-                    </button>
-                </div>
             </mat-card-actions>
         </mat-card>
     </div>
 </div>
 
-<div style="padding: 100px; alignment: center" *ngIf="!arriving.length">
+<div style="margin: 0 100px 100px; alignment: center" *ngIf="!arriving.length">
     <mat-card class="card">
-        <mat-card-title style="padding: 0.5em;">No students attending your tutorial today!</mat-card-title>
+        <mat-card-title style="padding: 0.5em;">No current requests to attend your tutorial</mat-card-title>
     </mat-card>
 </div>
 
+<div style="margin: 100px 120px 20px; font-family: psans-bold, sans-serif; font-size: 24px">
+    Requests to leave
+</div>
 
-<div style="padding: 100px" *ngIf="leaving.length">
+<div style="margin: 0 100px 100px;" *ngIf="leaving.length">
     <div class="card-container" *ngFor="let l of leaving">
         <mat-card class="card">
-            <mat-card-title class="pad">{{l}}</mat-card-title>
+            <mat-card-title class="pad">{{l.name}}</mat-card-title>
             <mat-card-content style="padding-left: 1em;">
                 Hello
             </mat-card-content>
@@ -39,8 +39,8 @@
     </div>
 </div>
 
-<div style="padding: 100px; alignment: center" *ngIf="!leaving.length">
+<div style="margin: 0 100px 100px; alignment: center" *ngIf="!leaving.length">
     <mat-card class="card">
-        <mat-card-title style="padding: 0.5em;">No students leaving your tutorial today!</mat-card-title>
+        <mat-card-title style="padding: 0.5em;">No current requests to leave your tutorial</mat-card-title>
     </mat-card>
 </div>
