work on student and create components

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,6 +1,6 @@
 <div class="step-container yellow-theme">
     <mat-card class="step">
-        <mat-vertical-stepper  #stepper>
+        <mat-vertical-stepper #stepper>
             <mat-step [stepControl]="firstFormGroup">
                 <form [formGroup]="firstFormGroup">
                     <ng-template matStepLabel>Student</ng-template>
@@ -32,13 +32,11 @@
                     <p style="padding-left: 1em; margin-bottom: 0">Enter first part of teacher e-mail (first initial, full last name)</p>
                     <div style="padding: 1em">
                         <mat-form-field style="padding-right: 1em">
-                            <input matInput name="fromTeachID" [attr.disabled]="this.fromMe" placeholder="Usual teacher" data-lpignore="true" formControlName="utCtrl" required>
+                            <input matInput name="fromTeachID" placeholder="6/7th period teacher" data-lpignore="true" formControlName="utCtrl" required>
                         </mat-form-field>
-                        <mat-checkbox formControlName="checkOne" [attr.disabled]="this.toMe" style="margin-right: 6em">Me</mat-checkbox>
                         <mat-form-field style="padding-right: 1em">
                             <input matInput name="toTeachID" placeholder="Tutorial teacher" data-lpignore="true" formControlName="ttCtrl" required>
                         </mat-form-field>
-                        <mat-checkbox formControlName="checkTwo">Me</mat-checkbox>
                     </div>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
@@ -54,7 +52,7 @@
                     </mat-form-field>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" (click)="submit()" type="submit">Finish</button>
+                        <button mat-raised-button style="background-color: dodgerblue; color: white" (click)="submit()" type="submit">Finish</button>
                         <mat-spinner style="height: 30px; width: 30px;" *ngIf="loading"></mat-spinner>
                     </div>
                 </form>
