--- a/src/app/today/today.component.html
+++ b/src/app/today/today.component.html
@@ -1,3 +1,12 @@
-<p>
-  today works!
-</p>
+<!--|        pending requests        |-->
+<!--|   arriving    |    leaving     |-->
+
+
+<!--OR-->
+
+
+<!--|          blocked day           |-->
+
+<!--<div *ngIf="this.api.isBlockedDay(this.loginService.smID)">-->
+
+<!--</div>-->
