--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -8,7 +8,7 @@
                         <input matInput name="studentID" placeholder="Student ID" formControlName="firstCtrl" data-lpignore="true" required>
                     </mat-form-field>
                     <div>
-                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit" (click)="loadSID()">Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit">Next</button>
                     </div>
                 </form>
             </mat-step>
@@ -22,7 +22,7 @@
                     </mat-form-field>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit" (click)="loadDate()">Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit">Next</button>
                     </div>
                 </form>
             </mat-step>
@@ -40,7 +40,7 @@
                     </div>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" (click)="loadTeachers()" type="submit">Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit">Next</button>
                     </div>
                 </form>
             </mat-step>
@@ -52,13 +52,15 @@
                     </mat-form-field>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                        <button mat-raised-button style="background-color: dodgerblue; color: white" (click)="submit()" type="submit">Finish</button>
-                        <mat-spinner style="height: 30px; width: 30px;" *ngIf="loading"></mat-spinner>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" (click)="submitButton()" type="submit">Finish</button>
                     </div>
                 </form>
             </mat-step>
             <mat-step>
                 <ng-template matStepLabel>Finish</ng-template>
+                <div *ngIf="loading">
+                    <mat-spinner></mat-spinner>
+                </div>
                 <div *ngIf="!loading">
                     <p *ngIf="gotError">An error occurred while processing your request. Please try again.</p>
                     <p style="padding: 1em">{{response}}</p>
