--- a/src/app/today/today.component.html
+++ b/src/app/today/today.component.html
@@ -1,3 +1,23 @@
-<p>
-  today works!
-</p>
+
+<h1 class="heading" style="margin: 1.3em;">Today</h1>
+<div>
+  <div style="margin: 1.2em">
+
+    <mat-card style="margin-left: 1.2em; margin-top: 1.2em; width: 45%; float: left">
+      <h3>There are # students coming today</h3>
+    </mat-card>
+
+    <mat-card style="margin-right: 1.2em; margin-top: 1.2em; width: 45%; float: right; ">
+      <h3>There are # students coming today</h3>
+    </mat-card>
+
+  </div>
+
+  <div style="margin: 1.2em">
+
+    <mat-card style="margin: 1.2em; width: 95%; float: left;">
+      <h3>There are # students coming today</h3>
+    </mat-card>
+
+  </div>
+</div>
