--- a/src/app/today/today.component.html
+++ b/src/app/today/today.component.html
@@ -3,12 +3,12 @@
 <div>
   <div style="margin: 1.2em">
 
-    <mat-card style="margin-left: 1.2em; margin-top: 1.2em; width: 45%; float: left">
-      <h3>There are # students coming today</h3>
+    <mat-card style="margin-left: 1.2em; margin-top: 1.2em; width: 45%; float: left; padding-top: 2%;padding-bottom: 2%;">
+      <h3>{{this.numberOfIncoming}}</h3>
     </mat-card>
 
-    <mat-card style="margin-right: 1.2em; margin-top: 1.2em; width: 45%; float: right; ">
-      <h3>There are # students coming today</h3>
+    <mat-card style="margin-right: 1.2em; margin-top: 1.2em; width: 45%; float: right; padding-top: 2%;padding-bottom: 2%;">
+      <h3>{{this.numberOfOutgoing}}</h3>
     </mat-card>
 
   </div>
@@ -16,7 +16,27 @@
   <div style="margin: 1.2em">
 
     <mat-card style="margin: 1.2em; width: 95%; float: left;">
-      <h3>There are # students coming today</h3>
+      <h3>Reasons Students are coming today:</h3>
+      <div class="example-container mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="Reason">
+            <th mat-header-cell *matHeaderCellDef> Reason </th>
+            <td mat-cell *matCellDef="let rowD"> {{rowD.reason}} </td>
+          </ng-container>
+
+          <!-- Position Column -->
+          <ng-container matColumnDef="NumberOfStudents">
+            <th mat-header-cell *matHeaderCellDef> Number of Students </th>
+            <td mat-cell *matCellDef="let rowD"> {{rowD.numberForReason}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
+
     </mat-card>
 
   </div>
