--- a/src/app/today/today.component.html
+++ b/src/app/today/today.component.html
@@ -23,13 +23,13 @@
           <!-- Name Column -->
           <ng-container matColumnDef="Reason">
             <th mat-header-cell *matHeaderCellDef> Reason </th>
-            <td mat-cell *matCellDef="let rowD"> {{rowD.reason}} </td>
+            <td mat-cell *matCellDef="let data"> {{data.reason.toString()}} </td>
           </ng-container>
 
           <!-- Position Column -->
-          <ng-container matColumnDef="NumberOfStudents">
-            <th mat-header-cell *matHeaderCellDef> Number of Students </th>
-            <td mat-cell *matCellDef="let rowD"> {{rowD.numberForReason}} </td>
+          <ng-container matColumnDef="StudentName">
+            <th mat-header-cell *matHeaderCellDef> Student </th>
+            <td mat-cell *matCellDef="let data"> {{data.studentName.toString()}} </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
