landing now automatically doesnt redirect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
                 </mat-list-item>
                 <mat-list-item style="height: max-content">
                     <p style="max-width: 200px;">
-                        Please select your respective portal. You will not be allowed to log in to the incorrect portal, so there's no need to try it.
+                        Please select your respective portal. You will not be allowed to log in to the incorrect portal.
                     </p>
                 </mat-list-item>
             </mat-list>
